---
source: src/reg_compiler/tests.rs
expression: err
---
0 ; script
1 [   1]  Push           L22:  
2 [   1]  LoadImediate   r5[fn([fn([i64, i64], 0)], 0)] (local *3)  
3 ; imediate killed 6 for global *0
4 [   1]  MemCpy         (global *0)  r5[fn([fn([i64, i64], 0)], 0)] (1u)  
5 [   1]  Pop            
6 [   1]  Push           L26:  
7 [   1]  LoadImediate   r7[fn([nil], 0)] (local *3)  
8 ; imediate killed 8 for global *1
9 [   1]  MemCpy         (global *1)  r7[fn([nil], 0)] (1u)  
10 [   1]  Pop            
11 ; imediate killed 9 for global *1
12 [   0]  Move           r10[&fn([nil], 0)] (global *1)  
13 [   0]  Move           r11[fn([nil], 0)] r10[&fn([nil], 0)] 
14 [   0]  PreCall        r12[nil] r11[fn([nil], 0)] (0u)  
15 [   0]  Call           
16 [   0]  Halt           
17 ; anon0
18 [   1]  LoadImediate   r1[i64] (local *3)  
19 [   1]  Move           r2[&i64] r1[i64] 
20 [   1]  Load           r3[i64] r2[&i64] 
21 [   1]  Return         r3[i64] (0u)  
22 ; t
23 [   1]  Push           L17:  
24 [   1]  LoadImediate   r4[fn([i64, i64], 0)] (local *3)  
25 [   1]  Return         r4[fn([i64, i64], 0)] (1u)  
26 ; main
27 [   1]  Return         r0[nil] (0u)
